@@ -1,5 +1,6 @@
 Patches in PTLib 2.10.9
 =======================
+- disable TinyJPEG due to errors in Coverity scan
 - dump core without interactive question
 - provide getdate.tab.c because of Bison 3 issue
 - fix GCC version detection for GCC 5.x and 6.x
